<resources>
    <string name="app_name">createForum</string>
    <string name="action_settings">Settings</string>
    <string name="item1">文章推荐</string>
    <string name="item2">关注文章</string>
    <string name="item3">我的文章</string>
    <string name="item4">个人中心</string>
    <string name="setting">设置</string>
    <string name="guide">引导页</string>
    <string name="enter">进入主页</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="save_pass">记住密码</string>
    <string name="forget_pass">忘记密码?</string>
    <string name="re_username">用户名</string>
    <string name="re_age">年龄</string>
    <string name="re_description">简介</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="re_password">密码</string>
    <string name="re_rePassword">再输入一次</string>
    <string name="re_email">邮箱</string>
    <string name="re_tip">注册成功需要前往邮箱验证，否则无法登陆!</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="updatePassword">修改密码</string>
    <string name="new_pass">新密码</string>
    <string name="old_pass">旧密码</string>
    <string name="pass_again">再次输入密码</string>
    <string name="loading_login">正在登录...</string>
    <string name="edit_user">编辑资料</string>
    <string name="show_name">用户名:</string>
    <string name="show_sex">标签:</string>
    <string name="show_age">昵称:</string>
    <string name="show_desc">个签:</string>
    <string name="update_data">确认修改</string>
    <string name="place_find">归属地查询</string>
    <string name="post_find">物流查询</string>
    <string name="logout">退出登录</string>
    <string name="edit_view_null_error">输入框不能为空</string>
    <string name="btn_camera">拍照</string>
    <string name="btn_picture">图库</string>
    <string name="btn_cancel">取消</string>
    <string name="find_courier">查询</string>
    <string name="tv_result">归属地</string>
    <string name="input">输入</string>
    <string name="send">发送</string>
    <string name="text_welfare">福利</string>
    <string name="tags">宠物</string>
    <string name="tag2">全部</string>
    <string name="tts">语音播报</string>
    <string name="tts_speak">开启之后与服务管家对话语音播报</string>
    <string name="message_desc">开启之后收到短信将弹框提示</string>
    <string name="message">智能短信提醒</string>
    <string name="update">检测版本</string>
    <string name="update_desc">检测是否有新版本提示下载</string>
    <string name="scan_desc">扫描二维码或条形码</string>
    <string name="scan">扫一扫</string>
    <string name="share">二维码分享</string>
    <string name="share_desc">把自己分享给朋友吧</string>
    <string name="place">我的位置</string>
    <string name="place_desc">时刻掌握自身位置</string>
    <string name="about">关于软件</string>
    <string name="about_desc">网页精简版移动app</string>
</resources>