<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10px">

        <EditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_username" />
        <!--<EditText-->
        <!--android:id="@+id/et_age"-->
        <!--android:hint="@string/re_age"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->
        <!--<EditText-->
        <!--android:id="@+id/et_desc"-->
        <!--android:hint="@string/re_description"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:lines="2"/>-->

        <!--<RadioGroup-->
        <!--android:id="@+id/mRadioGroup"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->
        <!--<RadioButton-->
        <!--android:id="@+id/rb_boy"-->
        <!--android:text="@string/male"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:checked="true"/>-->
        <!--<RadioButton-->
        <!--android:id="@+id/rb_girl"-->
        <!--android:text="@string/female"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="20dp"/>-->
        <!--</RadioGroup>-->

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_password"
            android:password="true" />

        <EditText
            android:id="@+id/et_repass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_rePassword"
            android:password="true" />

        <!--<EditText-->
        <!--android:id="@+id/et_email"-->
        <!--android:hint="@string/re_email"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

        <!--<TextView-->
        <!--android:text="@string/re_tip"-->
        <!--android:textColor="@color/colorAccent"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="15sp"/>-->
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg"
            android:text="@string/register"
            android:textColor="@android:color/white" />

</LinearLayout>